--- a/index/sobrenos.html
+++ b/index/sobrenos.html
@@ -33,12 +33,33 @@
     </div>
   </nav>
   </header>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<br>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <div id="sobre">
+      <h1>Quem Somos</h1><br>
+      Bem-vindo ao nosso universo de moda, onde cada peça conta uma história e cada detalhe é meticulosamente pensado para realçar a beleza e a confiança da mulher contemporânea. Há mais de uma década no mercado, temos o orgulho de oferecer o que há de melhor na moda feminina para todas as nossas clientes. Nosso compromisso é atender aos mais diversos gostos e estilos, sempre priorizando qualidade e conforto. Ao longo desses anos, construímos uma trajetória pautada na excelência, dedicando-nos a proporcionar experiências únicas através de peças que não apenas seguem as tendências, mas que também ressaltam a individualidade e elegância de cada mulher..
+    <br><br>
+    <h2> Nossa Missão</h2><br>
+      Nossa missão é ir além das tendências passageiras, criando roupas que transcendem o efêmero da moda. Queremos inspirar mulheres a abraçarem sua individualidade, proporcionando um guarda-roupa que não apenas segue as últimas novidades, mas também reflete a essência única de cada uma.
+    <br><br>
+    <h2>A Arte da Confecção</h2><br>
+     Nosso compromisso com a qualidade é intransigente. Cada peça é concebida com paixão e atenção aos detalhes, desde a seleção dos tecidos até o acabamento impecável. Valorizamos a arte da confecção, buscando constantemente a excelência para oferecer peças que não apenas vestem, mas elevam a experiência de vestir.
+    <br><br>
+    <h2>Sustentabilidade em Cada Ponto</h2><br>
+    Acreditamos que a moda deve ser bonita tanto para quem a usa quanto para o planeta. Comprometemo-nos com práticas sustentáveis em cada etapa do processo de produção, desde a escolha de materiais eco-friendly até embalagens recicláveis. Queremos que você se sinta bem não apenas com o que veste, mas também com o impacto positivo que suas escolhas têm no mundo ao seu redor.
+    <br><br>
+    <h2>Atendimento Excepcional</h2><br>
+    Nosso relacionamento com você vai além da transação comercial. Estamos aqui para oferecer um atendimento excepcional, compreendendo suas necessidades e desejos. A satisfação do cliente é a bússola que guia nossas ações, e estamos dedicados a superar suas expectativas em cada interação.
+    <br><br>
+    <h2>Junte-se a Nós</h2><br>
+    Explore nossa coleção e descubra como podemos ser parte do seu estilo único. Junte-se a nós nesta jornada de moda que celebra a feminilidade, a individualidade e a sustentabilidade. Obrigada por escolher fazer parte da nossa história.
+    <br><br>
+
+    </div>
+     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-
+<br>
     <footer class="py-4 bg-dark text-white" id="fontpe">
       <div class="container">
         <div class="row">
