--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body id="fundo">
-
+<!-- Cabeçario -->
 <header>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
@@ -34,18 +34,174 @@
   </nav>
   </header>
 
-  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+  <div class="produtos">
+    <!-- Linha produtos 1 -->
+    <div class="tamanho_prod">
+      <img src="caminho/para/imagem1.jpg" alt="Produto 1">
+      <h3>Nome do Produto 1</h3>
+      <p>Preço: R$ 50,00</p>
+      <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(1)">Adicionar ao Carrinho</button>
+  </div>
+  <div class="tamanho_prod">
+      <img src="caminho/para/imagem2.jpg" alt="Produto 2">
+      <h3>Nome do Produto 2</h3>
+      <p>Preço: R$ 35,00</p>
+      <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(2)">Adicionar ao Carrinho</button>
+  </div>
+  <div class="tamanho_prod">
+      <img src="caminho/para/imagem2.jpg" alt="Produto 2">
+      <h3>Nome do Produto 2</h3>
+      <p>Preço: R$ 35,00</p>
+      <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(3)">Adicionar ao Carrinho</button>
+  </div>
+  <div class="tamanho_prod">
+      <img src="caminho/para/imagem2.jpg" alt="Produto 2">
+      <h3>Nome do Produto 2</h3>
+      <p>Preço: R$ 35,00</p>
+      <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(4)">Adicionar ao Carrinho</button>
+  </div>
+
+  <!-- Linha produtos 2 -->
+     <div class="tamanho_prod">
+      <img src="caminho/para/imagem1.jpg" alt="Produto 1">
+      <h3>Nome do Produto 1</h3>
+      <p>Preço: R$ 50,00</p>
+      <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(1)">Adicionar ao Carrinho</button>
+  </div>
+  <div class="tamanho_prod">
+      <img src="caminho/para/imagem2.jpg" alt="Produto 2">
+      <h3>Nome do Produto 2</h3>
+      <p>Preço: R$ 35,00</p>
+      <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(2)">Adicionar ao Carrinho</button>
+  </div>
+  <div class="tamanho_prod">
+      <img src="caminho/para/imagem2.jpg" alt="Produto 2">
+      <h3>Nome do Produto 2</h3>
+      <p>Preço: R$ 35,00</p>
+      <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(3)">Adicionar ao Carrinho</button>
+  </div>
+  <div class="tamanho_prod">
+      <img src="caminho/para/imagem2.jpg" alt="Produto 2">
+      <h3>Nome do Produto 2</h3>
+      <p>Preço: R$ 35,00</p>
+      <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(4)">Adicionar ao Carrinho</button>
+  </div>
+
+  <!-- Linha produtos 3 -->
+     <div class="tamanho_prod">
+      <img src="caminho/para/imagem1.jpg" alt="Produto 1">
+      <h3>Nome do Produto 1</h3>
+      <p>Preço: R$ 50,00</p>
+      <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(1)">Adicionar ao Carrinho</button>
+  </div>
+  <div class="tamanho_prod">
+      <img src="caminho/para/imagem2.jpg" alt="Produto 2">
+      <h3>Nome do Produto 2</h3>
+      <p>Preço: R$ 35,00</p>
+      <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(2)">Adicionar ao Carrinho</button>
+  </div>
+  <div class="tamanho_prod">
+      <img src="caminho/para/imagem2.jpg" alt="Produto 2">
+      <h3>Nome do Produto 2</h3>
+      <p>Preço: R$ 35,00</p>
+      <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(3)">Adicionar ao Carrinho</button>
+  </div>
+  <div class="tamanho_prod">
+      <img src="caminho/para/imagem2.jpg" alt="Produto 2">
+      <h3>Nome do Produto 2</h3>
+      <p>Preço: R$ 35,00</p>
+      <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(4)">Adicionar ao Carrinho</button>
+  </div>
+
+  <!-- Linha produtos 4 -->
+     <div class="tamanho_prod">
+      <img src="caminho/para/imagem1.jpg" alt="Produto 1">
+      <h3>Nome do Produto 1</h3>
+      <p>Preço: R$ 50,00</p>
+      <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(1)">Adicionar ao Carrinho</button>
+  </div>
+  <div class="tamanho_prod">
+      <img src="caminho/para/imagem2.jpg" alt="Produto 2">
+      <h3>Nome do Produto 2</h3>
+      <p>Preço: R$ 35,00</p>
+      <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(2)">Adicionar ao Carrinho</button>
+  </div>
+  <div class="tamanho_prod">
+      <img src="caminho/para/imagem2.jpg" alt="Produto 2">
+      <h3>Nome do Produto 2</h3>
+      <p>Preço: R$ 35,00</p>
+      <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(3)">Adicionar ao Carrinho</button>
+  </div>
+  <div class="tamanho_prod">
+      <img src="caminho/para/imagem2.jpg" alt="Produto 2">
+      <h3>Nome do Produto 2</h3>
+      <p>Preço: R$ 35,00</p>
+      <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(4)">Adicionar ao Carrinho</button>
+  </div>
+
+  <!-- Linha produtos 5 -->
+   <div class="tamanho_prod">
+      <img src="caminho/para/imagem1.jpg" alt="Produto 1">
+      <h3>Nome do Produto 1</h3>
+      <p>Preço: R$ 50,00</p>
+      <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(1)">Adicionar ao Carrinho</button>
+  </div>
+  <div class="tamanho_prod">
+      <img src="caminho/para/imagem2.jpg" alt="Produto 2">
+      <h3>Nome do Produto 2</h3>
+      <p>Preço: R$ 35,00</p>
+      <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(2)">Adicionar ao Carrinho</button>
+  </div>
+  <div class="tamanho_prod">
+      <img src="caminho/para/imagem2.jpg" alt="Produto 2">
+      <h3>Nome do Produto 2</h3>
+      <p>Preço: R$ 35,00</p>
+      <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(3)">Adicionar ao Carrinho</button>
+  </div>
+  <div class="tamanho_prod">
+      <img src="caminho/para/imagem2.jpg" alt="Produto 2">
+      <h3>Nome do Produto 2</h3>
+      <p>Preço: R$ 35,00</p>
+      <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(4)">Adicionar ao Carrinho</button>
+  </div>
+
+  <!-- Linha produtos 6 -->
+    <div class="tamanho_prod">
+      <img src="caminho/para/imagem1.jpg" alt="Produto 1">
+      <h3>Nome do Produto 1</h3>
+      <p>Preço: R$ 50,00</p>
+      <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(1)">Adicionar ao Carrinho</button>
+  </div>
+  <div class="tamanho_prod">
+      <img src="caminho/para/imagem2.jpg" alt="Produto 2">
+      <h3>Nome do Produto 2</h3>
+      <p>Preço: R$ 35,00</p>
+      <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(2)">Adicionar ao Carrinho</button>
+  </div>
+  <div class="tamanho_prod">
+      <img src="caminho/para/imagem2.jpg" alt="Produto 2">
+      <h3>Nome do Produto 2</h3>
+      <p>Preço: R$ 35,00</p>
+      <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(3)">Adicionar ao Carrinho</button>
+  </div>
+  <div class="tamanho_prod">
+      <img src="caminho/para/imagem2.jpg" alt="Produto 2">
+      <h3>Nome do Produto 2</h3>
+      <p>Preço: R$ 35,00</p>
+      <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(4)">Adicionar ao Carrinho</button>
+  </div>
+</div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-
+    <!-- Roda pe -->
     <footer class="py-4 bg-dark text-white" id="fontpe">
       <div class="container">
         <div class="row">
           <div class="col-md-4">
             <h5>Sobre nós</h5>
-            <p>Há mais de uma década no mercado, temos o orgulho de oferecer o que há de melhor na moda feminina para todas as nossas clientes. Nosso compromisso é atender aos mais diversos gostos e estilos, sempre priorizando qualidade e conforto. Ao longo desses anos, construímos uma trajetória pautada na excelência, dedicando-nos a proporcionar experiências únicas através de peças que não apenas seguem as tendências, mas que também ressaltam a individualidade e elegância de cada mulher..</p>
+            <p>Há mais de uma década no mercado, temos o orgulho de oferecer o que há de melhor na moda feminina para todas as nossas clientes.</p>
           </div>
           <div class="col-md-4">
             <h5>Contato</h5>
