--- a/index.html
+++ b/index.html
@@ -37,159 +37,185 @@
   <div class="produtos">
     <!-- Linha produtos 1 -->
     <div class="tamanho_prod">
-      <img src="caminho/para/imagem1.jpg" alt="Produto 1">
-      <h3>Nome do Produto 1</h3>
-      <p>Preço: R$ 50,00</p>
+      <img src="IMG/logoloja.jpg" alt="Produto 1">
+      <h3 style="margin-top: 3%;">Calça jeans</h3>
+      <p>R$ 79,99</p>
       <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(1)">Adicionar ao Carrinho</button>
   </div>
   <div class="tamanho_prod">
-      <img src="caminho/para/imagem2.jpg" alt="Produto 2">
-      <h3>Nome do Produto 2</h3>
-      <p>Preço: R$ 35,00</p>
-      <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(2)">Adicionar ao Carrinho</button>
+      <img src="IMG/logoloja.jpg" alt="Produto 1">
+      <h3 style="margin-top: 3%;">Calça jeans</h3>
+      <p>R$ 79,99</p>
+      <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(1)">Adicionar ao Carrinho</button>
   </div>
+
   <div class="tamanho_prod">
-      <img src="caminho/para/imagem2.jpg" alt="Produto 2">
-      <h3>Nome do Produto 2</h3>
-      <p>Preço: R$ 35,00</p>
-      <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(3)">Adicionar ao Carrinho</button>
+      <img src="IMG/logoloja.jpg" alt="Produto 1">
+      <h3 style="margin-top: 3%;">Calça jeans</h3>
+      <p>R$ 79,99</p>
+      <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(1)">Adicionar ao Carrinho</button>
   </div>
+
   <div class="tamanho_prod">
-      <img src="caminho/para/imagem2.jpg" alt="Produto 2">
-      <h3>Nome do Produto 2</h3>
-      <p>Preço: R$ 35,00</p>
-      <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(4)">Adicionar ao Carrinho</button>
+      <img src="IMG/logoloja.jpg" alt="Produto 1">
+      <h3 style="margin-top: 3%;">Calça jeans</h3>
+      <p>R$ 79,99</p>
+      <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(1)">Adicionar ao Carrinho</button>
   </div>
+
 
   <!-- Linha produtos 2 -->
      <div class="tamanho_prod">
-      <img src="caminho/para/imagem1.jpg" alt="Produto 1">
-      <h3>Nome do Produto 1</h3>
-      <p>Preço: R$ 50,00</p>
+      <img src="IMG/logoloja.jpg" alt="Produto 1">
+      <h3 style="margin-top: 3%;">Calça jeans</h3>
+      <p>R$ 79,99</p>
       <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(1)">Adicionar ao Carrinho</button>
   </div>
+
   <div class="tamanho_prod">
-      <img src="caminho/para/imagem2.jpg" alt="Produto 2">
-      <h3>Nome do Produto 2</h3>
-      <p>Preço: R$ 35,00</p>
-      <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(2)">Adicionar ao Carrinho</button>
+      <img src="IMG/logoloja.jpg" alt="Produto 1">
+      <h3 style="margin-top: 3%;">Calça jeans</h3>
+      <p>R$ 79,99</p>
+      <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(1)">Adicionar ao Carrinho</button>
   </div>
+
   <div class="tamanho_prod">
-      <img src="caminho/para/imagem2.jpg" alt="Produto 2">
-      <h3>Nome do Produto 2</h3>
-      <p>Preço: R$ 35,00</p>
-      <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(3)">Adicionar ao Carrinho</button>
+      <img src="IMG/logoloja.jpg" alt="Produto 1">
+      <h3 style="margin-top: 3%;">Calça jeans</h3>
+      <p>R$ 79,99</p>
+      <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(1)">Adicionar ao Carrinho</button>
   </div>
+
   <div class="tamanho_prod">
-      <img src="caminho/para/imagem2.jpg" alt="Produto 2">
-      <h3>Nome do Produto 2</h3>
-      <p>Preço: R$ 35,00</p>
-      <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(4)">Adicionar ao Carrinho</button>
+      <img src="IMG/logoloja.jpg" alt="Produto 1">
+      <h3 style="margin-top: 3%;">Calça jeans</h3>
+      <p>R$ 79,99</p>
+      <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(1)">Adicionar ao Carrinho</button>
   </div>
+
 
   <!-- Linha produtos 3 -->
      <div class="tamanho_prod">
-      <img src="caminho/para/imagem1.jpg" alt="Produto 1">
-      <h3>Nome do Produto 1</h3>
-      <p>Preço: R$ 50,00</p>
+      <img src="IMG/logoloja.jpg" alt="Produto 1">
+      <h3 style="margin-top: 3%;">Calça jeans</h3>
+      <p>R$ 79,99</p>
       <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(1)">Adicionar ao Carrinho</button>
   </div>
+
+
   <div class="tamanho_prod">
-      <img src="caminho/para/imagem2.jpg" alt="Produto 2">
-      <h3>Nome do Produto 2</h3>
-      <p>Preço: R$ 35,00</p>
-      <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(2)">Adicionar ao Carrinho</button>
+      <img src="IMG/logoloja.jpg" alt="Produto 1">
+      <h3 style="margin-top: 3%;">Calça jeans</h3>
+      <p>R$ 79,99</p>
+      <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(1)">Adicionar ao Carrinho</button>
   </div>
+
+
   <div class="tamanho_prod">
-      <img src="caminho/para/imagem2.jpg" alt="Produto 2">
-      <h3>Nome do Produto 2</h3>
-      <p>Preço: R$ 35,00</p>
-      <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(3)">Adicionar ao Carrinho</button>
+      <img src="IMG/logoloja.jpg" alt="Produto 1">
+      <h3 style="margin-top: 3%;">Calça jeans</h3>
+      <p>R$ 79,99</p>
+      <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(1)">Adicionar ao Carrinho</button>
   </div>
+
+
   <div class="tamanho_prod">
-      <img src="caminho/para/imagem2.jpg" alt="Produto 2">
-      <h3>Nome do Produto 2</h3>
-      <p>Preço: R$ 35,00</p>
-      <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(4)">Adicionar ao Carrinho</button>
+      <img src="IMG/logoloja.jpg" alt="Produto 1">
+      <h3 style="margin-top: 3%;">Calça jeans</h3>
+      <p>R$ 79,99</p>
+      <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(1)">Adicionar ao Carrinho</button>
   </div>
+
 
   <!-- Linha produtos 4 -->
      <div class="tamanho_prod">
-      <img src="caminho/para/imagem1.jpg" alt="Produto 1">
-      <h3>Nome do Produto 1</h3>
-      <p>Preço: R$ 50,00</p>
+      <img src="IMG/logoloja.jpg" alt="Produto 1">
+      <h3 style="margin-top: 3%;">Calça jeans</h3>
+      <p>R$ 79,99</p>
       <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(1)">Adicionar ao Carrinho</button>
   </div>
+
   <div class="tamanho_prod">
-      <img src="caminho/para/imagem2.jpg" alt="Produto 2">
-      <h3>Nome do Produto 2</h3>
-      <p>Preço: R$ 35,00</p>
-      <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(2)">Adicionar ao Carrinho</button>
+      <img src="IMG/logoloja.jpg" alt="Produto 1">
+      <h3 style="margin-top: 3%;">Calça jeans</h3>
+      <p>R$ 79,99</p>
+      <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(1)">Adicionar ao Carrinho</button>
   </div>
+
   <div class="tamanho_prod">
-      <img src="caminho/para/imagem2.jpg" alt="Produto 2">
-      <h3>Nome do Produto 2</h3>
-      <p>Preço: R$ 35,00</p>
-      <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(3)">Adicionar ao Carrinho</button>
+      <img src="IMG/logoloja.jpg" alt="Produto 1">
+      <h3 style="margin-top: 3%;">Calça jeans</h3>
+      <p>R$ 79,99</p>
+      <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(1)">Adicionar ao Carrinho</button>
   </div>
+
   <div class="tamanho_prod">
-      <img src="caminho/para/imagem2.jpg" alt="Produto 2">
-      <h3>Nome do Produto 2</h3>
-      <p>Preço: R$ 35,00</p>
-      <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(4)">Adicionar ao Carrinho</button>
+      <img src="IMG/logoloja.jpg" alt="Produto 1">
+      <h3 style="margin-top: 3%;">Calça jeans</h3>
+      <p>R$ 79,99</p>
+      <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(1)">Adicionar ao Carrinho</button>
   </div>
+
 
   <!-- Linha produtos 5 -->
    <div class="tamanho_prod">
-      <img src="caminho/para/imagem1.jpg" alt="Produto 1">
-      <h3>Nome do Produto 1</h3>
-      <p>Preço: R$ 50,00</p>
+      <img src="IMG/logoloja.jpg" alt="Produto 1">
+      <h3 style="margin-top: 3%;">Calça jeans</h3>
+      <p>R$ 79,99</p>
       <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(1)">Adicionar ao Carrinho</button>
   </div>
+
   <div class="tamanho_prod">
-      <img src="caminho/para/imagem2.jpg" alt="Produto 2">
-      <h3>Nome do Produto 2</h3>
-      <p>Preço: R$ 35,00</p>
-      <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(2)">Adicionar ao Carrinho</button>
+      <img src="IMG/logoloja.jpg" alt="Produto 1">
+      <h3 style="margin-top: 3%;">Calça jeans</h3>
+      <p>R$ 79,99</p>
+      <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(1)">Adicionar ao Carrinho</button>
   </div>
+
   <div class="tamanho_prod">
-      <img src="caminho/para/imagem2.jpg" alt="Produto 2">
-      <h3>Nome do Produto 2</h3>
-      <p>Preço: R$ 35,00</p>
-      <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(3)">Adicionar ao Carrinho</button>
+      <img src="IMG/logoloja.jpg" alt="Produto 1">
+      <h3 style="margin-top: 3%;">Calça jeans</h3>
+      <p>R$ 79,99</p>
+      <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(1)">Adicionar ao Carrinho</button>
   </div>
+
   <div class="tamanho_prod">
-      <img src="caminho/para/imagem2.jpg" alt="Produto 2">
-      <h3>Nome do Produto 2</h3>
-      <p>Preço: R$ 35,00</p>
-      <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(4)">Adicionar ao Carrinho</button>
+      <img src="IMG/logoloja.jpg" alt="Produto 1">
+      <h3 style="margin-top: 3%;">Calça jeans</h3>
+      <p>R$ 79,99</p>
+      <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(1)">Adicionar ao Carrinho</button>
   </div>
+
 
   <!-- Linha produtos 6 -->
     <div class="tamanho_prod">
-      <img src="caminho/para/imagem1.jpg" alt="Produto 1">
-      <h3>Nome do Produto 1</h3>
-      <p>Preço: R$ 50,00</p>
+      <img src="IMG/logoloja.jpg" alt="Produto 1">
+      <h3 style="margin-top: 3%;">Calça jeans</h3>
+      <p>R$ 79,99</p>
       <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(1)">Adicionar ao Carrinho</button>
   </div>
+
   <div class="tamanho_prod">
-      <img src="caminho/para/imagem2.jpg" alt="Produto 2">
-      <h3>Nome do Produto 2</h3>
-      <p>Preço: R$ 35,00</p>
-      <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(2)">Adicionar ao Carrinho</button>
+      <img src="IMG/logoloja.jpg" alt="Produto 1">
+      <h3 style="margin-top: 3%;">Calça jeans</h3>
+      <p>R$ 79,99</p>
+      <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(1)">Adicionar ao Carrinho</button>
   </div>
-  <div class="tamanho_prod">
-      <img src="caminho/para/imagem2.jpg" alt="Produto 2">
-      <h3>Nome do Produto 2</h3>
-      <p>Preço: R$ 35,00</p>
-      <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(3)">Adicionar ao Carrinho</button>
+
+ <div class="tamanho_prod">
+      <img src="IMG/logoloja.jpg" alt="Produto 1">
+      <h3 style="margin-top: 3%;">Calça jeans</h3>
+      <p>R$ 79,99</p>
+      <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(1)">Adicionar ao Carrinho</button>
   </div>
-  <div class="tamanho_prod">
-      <img src="caminho/para/imagem2.jpg" alt="Produto 2">
-      <h3>Nome do Produto 2</h3>
-      <p>Preço: R$ 35,00</p>
-      <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(4)">Adicionar ao Carrinho</button>
+
+ <div class="tamanho_prod">
+      <img src="IMG/logoloja.jpg" alt="Produto 1">
+      <h3 style="margin-top: 3%;">Calça jeans</h3>
+      <p>R$ 79,99</p>
+      <button type="button" class="btn btn-outline-dark" onclick="adicionarAoCarrinho(1)">Adicionar ao Carrinho</button>
   </div>
+
 </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -207,7 +233,7 @@
             <h5>Contato</h5>
             <ul class="list-unstyled">
               <li>
-                <i class="fas fa-phone"></i> (55) 9916-57362
+                <i class="fas fa-phone"></i> (55) 99165-7362
               </li>
               <li>
                 <i class="fas fa-phone"></i> (55) 99604-8519
