--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
         <div class="row">
           <div class="col-md-4">
             <h5>Sobre nós</h5>
-            <p>Há mais de uma década no mercado, temos o orgulho de oferecer o que há de melhor na moda feminina para todas as nossas clientes.</p>
+            <p style="margin-right: 10%;">Há mais de uma década no mercado, temos o orgulho de oferecer o que há de melhor na moda feminina para todas as nossas clientes.</p>
           </div>
           <div class="col-md-4">
             <h5>Contato</h5>
