--- a/contato.html
+++ b/contato.html
@@ -44,7 +44,7 @@
         <div class="row">
           <div class="col-md-4">
             <h5>Sobre nós</h5>
-            <p>Há mais de uma década no mercado, temos o orgulho de oferecer o que há de melhor na moda feminina para todas as nossas clientes. Nosso compromisso é atender aos mais diversos gostos e estilos, sempre priorizando qualidade e conforto. Ao longo desses anos, construímos uma trajetória pautada na excelência, dedicando-nos a proporcionar experiências únicas através de peças que não apenas seguem as tendências, mas que também ressaltam a individualidade e elegância de cada mulher..</p>
+            <p style="margin-right: 10%;">Há mais de uma década no mercado, temos o orgulho de oferecer o que há de melhor na moda feminina para todas as nossas clientes.</p>
           </div>
           <div class="col-md-4">
             <h5>Contato</h5>
