--- a/sobrenos.html
+++ b/sobrenos.html
@@ -12,7 +12,7 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-      <a onclick="document.location='index.html'" class="nav-link" id="logo">
+      <a onclick="document.location='Geral.html'" class="nav-link" id="logo">
         <h1>Chá de moda</h1></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -65,7 +65,7 @@
         <div class="row">
           <div class="col-md-4">
             <h5>Sobre nós</h5>
-            <p>Há mais de uma década no mercado, temos o orgulho de oferecer o que há de melhor na moda feminina para todas as nossas clientes. Nosso compromisso é atender aos mais diversos gostos e estilos, sempre priorizando qualidade e conforto. Ao longo desses anos, construímos uma trajetória pautada na excelência, dedicando-nos a proporcionar experiências únicas através de peças que não apenas seguem as tendências, mas que também ressaltam a individualidade e elegância de cada mulher..</p>
+            <p>Há mais de uma década no mercado, temos o orgulho de oferecer o que há de melhor na moda feminina para todas as nossas clientes.</p>
           </div>
           <div class="col-md-4">
             <h5>Contato</h5>
