--- a/Geral.html
+++ b/Geral.html
@@ -40,7 +40,87 @@
       <p>Ativa</p>
       <button type="button" class="btn btn-outline-dark" onclick="document.location='cliente01.html'">Consultar</button>
   </div>
+
+  <div class="tamanho_prod">
+    <img src="IMG/user.png" alt="Produto 1" class="imgtamanho">
+    <h3 style="margin-top: 3%;">Isadora</h3>
+    <p>Ativa</p>
+    <button type="button" class="btn btn-outline-dark" onclick="document.location='cliente02.html'">Consultar</button>
+  </div>
+
+  <div class="tamanho_prod">
+    <img src="IMG/user.png" alt="Produto 1" class="imgtamanho">
+    <h3 style="margin-top: 3%;">Maria</h3>
+    <p>Ativa</p>
+    <button type="button" class="btn btn-outline-dark" onclick="document.location='cliente03.html'">Consultar</button>
+  </div>
+
+  <div class="tamanho_prod">
+    <img src="IMG/user.png" alt="Produto 1" class="imgtamanho">
+    <h3 style="margin-top: 3%;">Francieli</h3>
+    <p>Ativa</p>
+    <button type="button" class="btn btn-outline-dark" onclick="document.location='cliente04.html'">Consultar</button>
+  </div>
+
+  <!-- Linha produtos 2 -->
+    <div class="tamanho_prod">
+      <img src="IMG/user.png" alt="Produto 1" class="imgtamanho">
+      <h3 style="margin-top: 3%;">Fernanda</h3>
+      <p>Ativa</p>
+      <button type="button" class="btn btn-outline-dark" onclick="document.location='cliente05.html'">Consultar</button>
+  </div>
+
+  <div class="tamanho_prod">
+    <img src="IMG/user.png" alt="Produto 1" class="imgtamanho">
+    <h3 style="margin-top: 3%;">Ana</h3>
+    <p>Ativa</p>
+    <button type="button" class="btn btn-outline-dark" onclick="document.location='cliente06.html'">Consultar</button>
+  </div>
+
+  <div class="tamanho_prod">
+    <img src="IMG/user.png" alt="Produto 1" class="imgtamanho">
+    <h3 style="margin-top: 3%;">Eliza</h3>
+    <p>Ativa</p>
+    <button type="button" class="btn btn-outline-dark" onclick="document.location='cliente07.html'">Consultar</button>
+  </div>
+
+  <div class="tamanho_prod">
+    <img src="IMG/user.png" alt="Produto 1" class="imgtamanho">
+    <h3 style="margin-top: 3%;">Larissa</h3>
+    <p>Ativa</p>
+    <button type="button" class="btn btn-outline-dark" onclick="document.location='cliente08.html'">Consultar</button>
+  </div>
+
+    <!-- Linha produtos 3 -->
+    <div class="tamanho_prod">
+      <img src="IMG/user.png" alt="Produto 1" class="imgtamanho">
+      <h3 style="margin-top: 3%;">Leticia</h3>
+      <p>Ativa</p>
+      <button type="button" class="btn btn-outline-dark" onclick="document.location='cliente09.html'">Consultar</button>
+  </div>
+
+  <div class="tamanho_prod">
+    <img src="IMG/user.png" alt="Produto 1" class="imgtamanho">
+    <h3 style="margin-top: 3%;">Patricia</h3>
+    <p>Ativa</p>
+    <button type="button" class="btn btn-outline-dark" onclick="document.location='cliente10.html'">Consultar</button>
+  </div>
+
+  <div class="tamanho_prod">
+    <img src="IMG/user.png" alt="Produto 1" class="imgtamanho">
+    <h3 style="margin-top: 3%;">Nicoli</h3>
+    <p>Ativa</p>
+    <button type="button" class="btn btn-outline-dark" onclick="document.location='cliente11.html'">Consultar</button>
+  </div>
+
+  <div class="tamanho_prod">
+    <img src="IMG/user.png" alt="Produto 1" class="imgtamanho">
+    <h3 style="margin-top: 3%;">Roberta</h3>
+    <p>Ativa</p>
+    <button type="button" class="btn btn-outline-dark" onclick="document.location='cliente12.html'">Consultar</button>
+  </div>
 </div>
+
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
