--- a/cliente12.html
+++ b/cliente12.html
@@ -35,24 +35,21 @@
     
     <div class="infcliente">
       <p class="txt"><b>Nome completo:</b></p>
-      <input type="text" class="caixinha" value="Renata Raimunda Ayla da Rocha">
+      <input type="text" class="caixinha" value="">
       <p class="txt"><b>Data de nascimento:</b></p>
-      <input type="date" class="caixinha" value="2002-10-09">
+      <input type="date" class="caixinha" value="">
       <p class="txt"><b>CPF:</b></p>
-      <input type="number" class="caixinha" value="08821660346">
+      <input type="number" class="caixinha" value="">
       <p class="txt"><b>Numero de Celular:</b></p>
-      <input type="number" class="caixinha" value="19981477141">
+      <input type="number" class="caixinha" value="">
       <p class="txt"><b>Endereço:</b></p>
-      <input type="text" class="caixinha" value="Rua Thomaz Sarbo Langoni, 127, Campinas/SP">
+      <input type="text" class="caixinha" value="">
       <p class="txt"><b>Email:</b></p>
-      <input type="email" class="caixinha" value="renata_raimunda_darocha@fransystems.com.br">
+      <input type="email" class="caixinha" value="">
       <p class="txt"><b>Anotações:</b></p>
-      <textarea type="text" class="anotacoes" value="anotacoes">
-        1x Calça jeans, tamanho G - R$ 199,00
-        1x Short jeans preto, tamanho G - R$ 89,00
-        1x Vestido verde, tamanho G - R$ 209,00</textarea>
+      <textarea type="text" class="anotacoes" value=""></textarea>
       <p class="txt"><b>A pagar:</b></p>
-      <input type="text" class="caixinha" id="vlr" value="R$ 497,00">
+      <input type="text" class="caixinha" id="vlr" value="">
     </div>
 
     <div class="btnedit">
