--- a/index.html
+++ b/index.html
@@ -36,6 +36,19 @@
         </div>
     
         <script>
+                  document.getElementById("uname").addEventListener("keyup", function(event) {
+              if (event.keyCode === 13) {
+                  event.preventDefault();
+                  validate();
+              }
+          });
+          document.getElementById("psw").addEventListener("keyup", function(event) {
+              if (event.keyCode === 13) {
+                  event.preventDefault();
+                  validate();
+              }
+          });
+
           function validate() {
               var username = document.getElementById("uname").value;
               var password = document.getElementById("psw").value;
@@ -51,7 +64,6 @@
       </script>
 
       <div class="vazio">
-
       </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
